--- a/Topster Cine/views/admin/compra/indexCompra.handlebars
+++ b/Topster Cine/views/admin/compra/indexCompra.handlebars
@@ -1,4 +1,4 @@
-<h1>Compras:</h1>
+ï»¿<h1>Compras:</h1>
 {{#each compras}}
 <div class="card mt-2">
     <div class="card-body">
@@ -13,8 +13,8 @@
 
 {{/each}}
 
-<h1>Promocções:</h1>
-{{#each promoção}}
+<h1>PromocÃ§Ãµes:</h1>
+{{#each promoÃ§Ã£o}}
 <div class="card mt-2">
     <div class="card-body">
         <h3>{{dataValues.promocaoID}}</h3>
@@ -23,6 +23,6 @@
     </div>
 </div>
 {{else}}
-<h4 class="mt-4">Nenhuma promoção cadastrado!</h4>
+<h4 class="mt-4">Nenhuma promoÃ§Ã£o cadastrado!</h4>
 
 {{/each}}
