--- a/Topster Cine/views/admin/filme/formFilme.handlebars
+++ b/Topster Cine/views/admin/filme/formFilme.handlebars
@@ -1,4 +1,4 @@
-{{#each erros}}
+ï»¿{{#each erros}}
 <div class="alert alert-danger">{{text}}</div>
 {{else}}
 
@@ -8,11 +8,11 @@
 <div class="card">
     <div class="card-body">
         <form action="/admin/filme/add" method="post">
-            <label for="titulo">Título: </label>
+            <label for="titulo">TÃ­tulo: </label>
                 <input type="text" id="titulo" name="titulo" placeholder="Titulo do Filme" class="form-control mt-2">
             <label for="titulo">Diretor: </label>
                 <input type="text" id="diretor" name="diretor" placeholder="Diretor do Filme" class="form-control mt-2">
-            <label for="dataLancamento">Data de Lançamento: </label>
+            <label for="dataLancamento">Data de LanÃ§amento: </label>
                 <input type="date" id="dataLancamento "name="dataLancamento" class="form-control mt-2">
             <label for="sinopse">Sinopse: </label>
                 <textarea type="text" id ="sinopse" name="sinopse" placeholder="Sinopse do Filme" class="form-control mt-2"></textarea>
