--- a/Topster Cine/views/admin/indexAdminMaster.handlebars
+++ b/Topster Cine/views/admin/indexAdminMaster.handlebars
@@ -1,4 +1,4 @@
-<h1>Lista de Usu·rios</h1>
+Ôªø<h1>Lista de Usu√°rios</h1>
 
 <div class="container">
     <div class="row row-cols-5">
@@ -37,7 +37,7 @@
 </div>
 {{else}}
 <br />
-<text class="mt-2">N„o h· usu·rios cadastrados</text>
+<text class="mt-2">N√£o h√° usu√°rios cadastrados</text>
 {{/each}}
 
 {{#each admins}}
@@ -66,5 +66,5 @@
 </div>
 {{else}}
 <br />
-<text class="mt-2">N„o h· admins cadastrados</text>
+<text class="mt-2">N√£o h√° admins cadastrados</text>
 {{/each}}
