--- a/Topster Cine/views/admin/produto/indexProd.handlebars
+++ b/Topster Cine/views/admin/produto/indexProd.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+Ôªø<div class="container">
     <div class="row">
         <div class="col">
             <h1>Produtos:</h1>
@@ -22,11 +22,10 @@
 
             {{/each}}
         </div>
-        ,
         <div class="col">
-            <h1>PromoÁ„o:</h1>
+            <h1>Promo√ß√£o:</h1>
 
-            <a href="/admin/promo/reg"><button class="btn btn-success mt-4">Nova PromoÁ„o</button></a>
+            <a href="/admin/promo/reg"><button class="btn btn-success mt-4">Nova Promo√ß√£o</button></a>
 
             {{#each promocoes}}
             <div class="card mt-2">
@@ -42,7 +41,7 @@
                 </div>
             </div>
             {{else}}
-            <h4 class="mt-4">Nenhum produto cadastrado!</h4>
+            <h4 class="mt-4">Nenhuma promo√ß√£o cadastrada!</h4>
 
             {{/each}}
 
