--- a/Topster Cine/views/usuario/produto/indexComp.handlebars
+++ b/Topster Cine/views/usuario/produto/indexComp.handlebars
@@ -1,2 +1,2 @@
-        <h3>{{produto.dataValues.nome}}</h3>
+﻿        <h3>{{produto.dataValues.nome}}</h3>
         <text><b>R$: </b></text><text id="prc">{{produto.dataValues.preco}}</text><br /><br />
