--- a/Topster Cine/views/admin/produto/editarPromo.handlebars
+++ b/Topster Cine/views/admin/produto/editarPromo.handlebars
@@ -1,14 +1,14 @@
-{{#each erros}}
+ï»¿{{#each erros}}
 <div class="alert alert-danger">{{text}}</div>
 {{else}}
 
 {{/each}}
-<h3>Editar Promoção:</h3>
+<h3>Editar PromoÃ§Ã£o:</h3>
 
 <div class="card">
     <div class="card-body">
         <form action="/admin/promo/update" method="post">
-            <label for="idPromo">ID da Promoção: </label>
+            <label for="idPromo">ID da PromoÃ§Ã£o: </label>
             <input type="text" id="idPromo" name="idPromo" placeholder="idPromo" class="form-control mt-2" value="{{promocao.promocaoID}}">
 
             <label for="idProd" class="mt-2">Produtos: </label>
@@ -20,12 +20,12 @@
                 {{/each}}
             </select>
             <div class="form-group row mt-2">
-                <label for="preco" class="col-sm-2 col-form-label mt-2">Preço R$:</label>
+                <label for="preco" class="col-sm-2 col-form-label mt-2">PreÃ§o R$:</label>
                 <div class="col-sm-10">
                     <input type="text" id="preco" name="preco" placeholder="00.00" class="form-control mt-2" onkeypress="$(this).mask('999.00', { reverse: true });" value="{{promocao.preco}}">
                 </div>
             </div>
-            <button type="submit" class="btn btn-success mt-4">Editar Promoção</button>
+            <button type="submit" class="btn btn-success mt-4">Editar PromoÃ§Ã£o</button>
         </form>
     </div>
 </div>
