--- a/Topster Cine/views/admin/produto/formPromo.handlebars
+++ b/Topster Cine/views/admin/produto/formPromo.handlebars
@@ -1,4 +1,4 @@
-{{#each erros}}
+ï»¿{{#each erros}}
 <div class="alert alert-danger">{{text}}</div>
 {{else}}
 
@@ -8,7 +8,7 @@
 <div class="card">
     <div class="card-body">
         <form action="/admin/promo/add" method="post">
-            <label for="idPromo">ID da Promoção: </label>
+            <label for="idPromo">ID da PromoÃ§Ã£o: </label>
             <input type="text" id="idPromo" name="idPromo" placeholder="idPromo" class="form-control mt-2">
 
             <label for="idProd" class="mt-2">Produtos: </label>
@@ -20,7 +20,7 @@
                 {{/each}}
             </select>
             <div class="form-group row mt-2">
-                <label for="preco" class="col-sm-2 col-form-label mt-2">Preço R$:</label>
+                <label for="preco" class="col-sm-2 col-form-label mt-2">PreÃ§o R$:</label>
                 <div class="col-sm-10">
                     <input type="text" id="preco" name="preco" placeholder="00.00" class="form-control mt-2" onkeypress="$(this).mask('999.00', { reverse: true });">
                 </div>
