--- a/Topster Cine/views/partials/_navbar.handlebars
+++ b/Topster Cine/views/partials/_navbar.handlebars
@@ -1,12 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+ï»¿<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Topstercine</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/filmes">Programação</a>
+                <a class="nav-link" href="/filmes">ProgramaÃ§Ã£o</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/produtos">Produtos</a>
@@ -19,9 +20,10 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/admin/filme">Filmes</a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="/admin/produto">Produtos</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="/admin/sessoes">Sessoes</a>
                 </div>
             </li>
             {{/if}}
@@ -45,4 +47,5 @@
             </li>
             {{/if}}
         </ul>
+    </div>
 </nav>
