--- a/Topster Cine/views/usuario/login.handlebars
+++ b/Topster Cine/views/usuario/login.handlebars
@@ -1,4 +1,4 @@
-<h3>login:</h3>
+﻿<h3>login:</h3>
 <div class="card">
     <div class="card-body">
     <form action="/usuarios/login" method="post">
